# rusync

./: .gitignore  .travis.yml  Cargo.toml  Changelog.md  LICENSE  README.md  tbump.toml  test.sh
.github/workflows/: release.yml
src/: app.rs  console_info.rs  entry.rs  error.rs  fsops.rs  lib.rs  main.rs  pipeline.rs  progress.rs  sync.rs
src/workers/: mod.rs  progress_worker.rs  sync_worker.rs  walk_worker.rs
tests/: integration_test.rs
tools/: check-changelog.py  check-output.sh  ci.sh  test_n.py
