[package]
name = "rusync"
version = "0.6.0"
authors = ["Dimitri Merejkowsky <d.merej@gmail.com>"]

readme = "README.md"
description = "Minimalist rsync clone in Rust"
license = "BSD-3-Clause"

keywords = ["rsync"]
categories = ["command-line-utilities"]

repository = "https://github.com/dmerejkowsky/rusync"

edition = "2018"

[dependencies]
colored = "1.6"
filetime = "0.1"
humansize = "1.1.0"
humantime = "2.0.1"
pathdiff = "0.1.0"
structopt = "0.2.8"
term_size = "0.3"

[dev-dependencies]
tempdir = "0.3"
