[package]
name = "rusync"
version = "0.7.2"
authors = ["Dimitri Merejkowsky <dimitri@dmerej.info>"]

readme = "README.md"
description = "Minimalist rsync clone in Rust"
license = "BSD-3-Clause"

keywords = ["rsync"]
categories = ["command-line-utilities"]

repository = "https://github.com/dmerejkowsky/rusync"

edition = "2021"

[dependencies]
anyhow = "1.0.36"
clap = {version = "3.0.5", features = ["derive"] }
colored = "2.0.0"
filetime = "0.2.15"
humansize = "1.1.0"
humantime = "2.0.1"
pathdiff = "0.2.1"
term_size = "0.3"

[dev-dependencies]
tempfile = "3.2.0"
